<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>followjointtrajectory_action_client</name>
  <version>0.7.3</version>
  <description>follow joint trajectory client</description>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
  <license>Apache License 2.0</license>
  <author email="jacob@openrobotics.org">Jacob Perron</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
